<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_alarm_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="45"
            android:orientation="vertical"
            android:paddingRight="5sp">

            <ImageView
                android:id="@+id/arrow_up1"
                android:layout_width="82dp"
                android:layout_height="82dp"
                android:layout_gravity="center"
                android:contentDescription="@string/arrow_up"
                android:src="@drawable/ic_arrow_up" />

            <EditText
                android:id="@+id/hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:text="@string/double_zero"
                android:textSize="35sp" />

            <ImageView
                android:id="@+id/arrow_down1"
                android:layout_width="82dp"
                android:layout_height="82dp"
                android:layout_gravity="center"
                android:contentDescription="@string/arrow_down"
                android:src="@drawable/ic_arrow_down" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="45"
            android:orientation="vertical"
            android:paddingLeft="5sp">

            <ImageView
                android:id="@+id/arrow_up2"
                android:layout_width="82sp"
                android:layout_height="82sp"
                android:layout_gravity="center"
                android:contentDescription="@string/arrow_up"
                android:src="@drawable/ic_arrow_up" />

            <EditText
                android:id="@+id/minutes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:text="@string/double_zero"
                android:textSize="35sp" />

            <ImageView
                android:id="@+id/arrow_down2"
                android:layout_width="82dp"
                android:layout_height="82dp"
                android:layout_gravity="center"
                android:contentDescription="@string/arrow_down"
                android:src="@drawable/ic_arrow_down" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title" />

        <EditText
            android:id="@+id/editTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:maxLength="13"
            android:singleLine="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tone"
            android:textColor="@color/blue" />

        <Spinner
            android:id="@+id/list_tone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/rounded_button"
            android:padding="3dp"
            android:text="@string/save" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/rounded_button"
            android:padding="3dp"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>
