<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/number_of_question_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/arrow_up1"
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:layout_gravity="center"
            android:contentDescription="@string/arrow_up"
            android:src="@drawable/ic_arrow_up" />

        <EditText
            android:id="@+id/number_of_questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:selectAllOnFocus="true" />

        <ImageView
            android:id="@+id/arrow_down1"
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:layout_gravity="center"
            android:contentDescription="@string/arrow_down"
            android:src="@drawable/ic_arrow_down" />

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/rounded_button"
            android:padding="3dp"
            android:text="@string/ok" />

    </LinearLayout>

</RelativeLayout>
