...
                app:showAsAction="ifRoom" />
        </menu>

    </item>

    <item
        android:id="@+id/game"
        android:icon="@drawable/ic_game"
        android:title="@string/configuration_of_the_game"
        app:showAsAction="ifRoom">

        <menu>
            <item
...
                android:id="@+id/category_of_question"
                android:title="@string/choose_category_menu"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/number_of_question"
                android:title="@string/number_of_questions_menu"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/level_of_question"
                android:title="@string/level_of_questions_menu"
                app:showAsAction="ifRoom" />
...
